# live555_mpp_client

./: CMakeLists.txt  README.md
include/: mpp_decoder.h  rtsp_client.h  rtsp_client_live555.h  safely_queue.h  v4l2.h
src/: drm_test.cpp  main.cpp  mpp_decoder.cpp  rtsp_client.cpp  v4l2.cpp
